@@ -642,24 +642,14 @@ public class Shift extends Shift_Base {
         return false;
     }
 
-    @Override
-    public void setName(String name) {
-        super.setName(name);
-        super.setNome(name);
+    @Deprecated
+    public String getNome() {
+        return getName();
     }
 
     @Deprecated
-    @Override
-    public void setNome(String nome) {
-        super.setNome(nome);
-        super.setName(nome);
+    public void setNome(String name) {
+        setName(name);
     }
 
-    public boolean migrateNomeToName() {
-        if (StringUtils.isBlank(super.getName())) {
-            super.setName(getNome());
-            return true;
-        }
-        return false;
-    }
 }
